# ExcalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
ExcalBindings/: CMakeLists.txt
ExcalCore/: CMakeLists.txt
ExcalCore/include/ExcalCore/Core/UUID/: UUID.h  UUID_Manager.h
ExcalCore/include/ExcalCore/Objects/: GameObject.h  Object.h
ExcalCore/include/ExcalCore/Objects/Components/: Camera.h  Component.h  MeshRenderer.h  Transform.h
ExcalCore/include/ExcalCore/Rendering/: GPU_Data.h  Material.h  Renderer.h  Shader.h
ExcalCore/include/ExcalCore/Rendering/Meshes/: Mesh.h  MeshInstance.h  Vertex.h
ExcalCore/include/ExcalCore/Rendering/Shader/: Shader.h
ExcalCore/include/ExcalCore/Systems/Debug/: Log.h
ExcalCore/include/ExcalCore/Systems/Input/: Input.h  InputBinding.h  InputState.h  InputSystem.h  KeyCode.h
ExcalCore/include/ExcalCore/Systems/Time/: Time.h
ExcalCore/src/Core/UUID/: UUID_Manager.cpp
ExcalCore/src/Objects/Components/: Camera.cpp  Transform.cpp
ExcalCore/src/Renderer/: Material.cpp  Renderer.cpp  Shader.cpp
ExcalCore/src/Renderer/Meshes/: Mesh.cpp
ExcalCore/src/Systems/Input/: Input.cpp  InputSystem.cpp
ExcalEditor/: CMakeLists.txt
ExcalRuntime/: CMakeLists.txt
ExcalRuntime/include/: ExcalRuntime.h
ExcalRuntime/include/ExcalRuntime/: Runtime.h
ExcalRuntime/src/: Runtime.cpp
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
